--- a/templates/news_list.html
+++ b/templates/news_list.html
@@ -3,13 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kun uz</title>
+    <style>
+        .main_image{
+            padding-left: 80px;
+        }
+            .header{
+           width: 100%;
+           height: 60px;
+           background-color: rgb(245, 240, 240);
+           margin: 0;
+           display: flex;
+           border-radius: 10px;
+           display: flex;
+           align-items: center;
+           justify-content:space-evenly;
+           }
+           .header a{
+           text-decoration: none;
+            color: black;
+            font-size: 16px;
+            font-weight:600 ;
+           }
+           .header p{
+            font-size: 30px;
+           }
+           .main_theme{
+            margin-top: 60px;
+            text-decoration: none;
+            color: black;
+            font-size: 30px;
+           }
+           .main_theme img{
+            width: 100%; 
+            height: auto; 
+            max-width: 300px;
+            object-fit: cover;
+            display: flex;
+            display: block; 
+            margin-bottom: 20px;
+           }
+           .main_theme a{
+            text-decoration: none;
+            display: flex;
+            font-size: 30px;
+            display: block; 
+            margin-bottom: 10px; 
+           }
+           li{
+            list-style-type: none;
+            margin: 0;
+           }
+    </style>
 </head>
 <body>
-    {% for i in object_list %}
-    <a href="{% url 'news_detail' i.pk %}"> <li>{{i.title}}</li> </a>
-    {% endfor %}
-    <br>
-    <button><a href="{% url 'news_create' %}">yaratish</a></button>
+    <div class="main_image">
+        <img src="https://avatars.mds.yandex.net/get-adfox-content/2815276/240426_adfox_1749280_12267429.61bb19446c5021ccf41ff3a802a50705.jpg/optimize.webp" alt="">
+    </div>
+    <div class="header">
+
+        <img src="https://kun.uz/assets/d1394a23/img/icons/logo-light.svg" class="kun uzx">
+        <a href="/">SIYOSAT |</a>
+        <a href="/">JAMIYAT |</a>
+        <a href="/">BIZNES |</a>
+        <a href="/">TECH |</a>
+        <a href="/">SPORT |</a>
+        <a href="/">TURIZM |</a>
+        <select name="" id="">
+            <option value="uz">Uzbek</option>
+            <option value="ru">English</option>
+        </select>
+        <p>🔎</p>
+    
+        </div>
+
+        <div class="main_theme">
+            {% for i in object_list %}
+            <a href="{% url 'news_detail' i.pk %}"> <li>{{i.title}}</li></a>
+            <hr>
+            <div>
+                <img src="{{i.image.url}}" alt="">
+            </div>
+            {% endfor %}
+            <br> <br> <br>
+           </div>
+           <button><a href="{% url 'news_create' %}" >yaratish</a></button>
+        
 </body>
 </html>
